Ajout page 404 fonctionnel + redirection login portal etc

--- a/Cave-A-Vin/src/app/login/Components/login.component.css
+++ b/Cave-A-Vin/src/app/login/Components/login.component.css
@@ -4,18 +4,30 @@ body {
     font-family: sans-serif;
     background: linear-gradient(to right, #b92b27, #1565c0)
 }
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    /*background-color: #fff;*/
+    background-clip: border-box;
+    /* border: 1px solid rgb(190, 43, 43); */
+    border-radius: .25rem;
+    background: none;
+}
 
 .box {
     width: 500px;
     padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
     background: #191919;
-    ;
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px
+    /* margin-top: 100px; */
+    margin: auto;
 }
 
 .box input[type="text"],
