--- a/Cave-A-Vin/src/app/login/Components/login.component.html
+++ b/Cave-A-Vin/src/app/login/Components/login.component.html
@@ -5,8 +5,9 @@
           <div class="card">
             <div class="box">
               <h1>Connection</h1>
-              <p class="text-muted"> Please enter your login and password !</p>
-              <p class="text-muted"> {{errormessage}}</p>
+              <p class="text-muted {{invisible}}"> Please enter your login and password !</p>
+              <div class="text-muted {{errorclass}}" role="alert">{{errormessage}}</div>
+              <div class="text-muted {{valideclass}}" role="alert">{{validemessage}}</div>
               <input type="text" name="" placeholder="Username" [(ngModel)]="auth.username">
               <input type="password" name="" placeholder="Password" [(ngModel)]="auth.password">
               <input type="submit" name="" value="Login" href="#" (click)="login()">
