--- a/Cave-A-Vin/src/app/portal/Components/panel/panel.component.css
+++ b/Cave-A-Vin/src/app/portal/Components/panel/panel.component.css
@@ -1,16 +1,19 @@
 
-   .card {
+.card {
+    background-image:url('../../../../assets/img/fond-cave.jpg');
+    background-size: cover;
     position: relative;
     display: flex;
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: rgba(200, 10, 10, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
-    opacity: 1;
+    
 }
+
 p{
     color: white;
 }
