--- a/Cave-A-Vin/src/app/portal/Components/panel/panel.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/panel/panel.component.html
@@ -1,12 +1,19 @@
 
 <div class="card">
-    <div class="box text-center">
-        <h2 class="text-white text-center">Admin</h2>
-        <p>Bonjour </p>
-        <button style="width: 80%;" type="button" class="btn btn-warning" href="" (click)="disconect()">Déconnection</button>
-    </div>
-    <div class="box">
-        
+    <!-- <img src="../../../../assets/img/fond-cave.jpg"> -->
+    <div class="background">
+        <div class="box text-center">
+            <h2 class="text-white text-center">Admin</h2>
+            <p>Salut</p><!-- {{login.username}} -->   
+        </div>
+        <div class="box text-center">
+            <button style="width: 80%; margin-bottom: 20px;" type="button" class="btn btn-success" href="">Recherche bouteille</button>
+            <button style="width: 80%; margin-bottom: 20px;" type="button" class="btn btn-success" href="">Ajouter bouteille/cave</button>
+            <!-- <button style="width: 50%;" type="button" class="btn btn-success" href=""></button> -->
+        </div>
+        <div class="box text-center">
+            <button style="width: 80%; margin-bottom: 20px;" type="button" class="btn btn-warning" href="" (click)="disconect()">Déconnection</button>
+        </div>
     </div>
 </div>
 
