--- a/Cave-A-Vin/src/app/portal/Components/portal.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/portal.component.html
@@ -1,8 +1,5 @@
-<app-banner></app-banner>
 
-<div class="container">
-    <app-main></app-main>
-</div>
+<app-home-page></app-home-page>
 
 <router-outlet></router-outlet>
 
