--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -1,4 +1,4 @@
-<!-- Bannière -->
+<!-- Bannière
 <div class="jumbotron text-center">
     <div class="container">
         <div class="row">
@@ -11,4 +11,50 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="">
+              <img src="../../../../favicon.ico" alt="Gestionnaire de cave - Made by Ethan" style="max-width: 50%;">
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#myNaveBar"
+            aria-controls="myNaveBar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="myNaveBar">
+            <ul class="navbar-nav mb-2 mb-lg-0" style="width: 100%;">
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="">Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Mes bouteilles</a>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Ajouter
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" href="">Des bouteilles</a>
+                      <a class="dropdown-item" href="">Une cave</a>
+                  </ul>
+                </li>
+              <li class="navvar-text">
+                <a class="nav-link" href="">A propos</a>
+              </li>
+              <li class="navvar-text;" style="margin: auto 50px auto auto;">
+                  <button style="width: 150px;" type="button" class="btn btn-warning" href="" (click)="disconect()">Déconnection</button>
+              </li>     
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Navbar -->
