Modification banner, changement de toute les routes, ajout dela page bouteille delete add and receive bottle

--- a/Cave-A-Vin/src/app/portal/Components/main/main.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/main/main.component.html
@@ -1,6 +1,5 @@
-<div class="row align-items-center" style="display: inline-flex; width: 100%; padding: 1%;">
+<!-- <div class="row align-items-center" style="display: inline-flex; width: 100%; padding: 1%;">
     <app-panel style="width: 25%;"></app-panel>
     <app-main-content style="width:75%;"></app-main-content>
-</div>
-
-<router-outlet></router-outlet>
+</div> -->
+<app-bottle></app-bottle>
