--- a/Cave-A-Vin/src/app/portal/Components/panel/panel.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/panel/panel.component.html
@@ -12,7 +12,7 @@
             <!-- <button style="width: 50%;" type="button" class="btn btn-success" href=""></button> -->
         </div>
         <div class="box text-center">
-            <button style="width: 80%; margin-bottom: 20px;" type="button" class="btn btn-warning" href="" (click)="disconect()">Déconnection</button>
+            <button style="width: 80%; margin-bottom: 20px;" type="button" class="btn btn-warning" href="" (click)="disconnect()">Déconnection</button>
         </div>
     </div>
 </div>
