--- a/Cave-A-Vin/src/app/login/Components/login.component.html
+++ b/Cave-A-Vin/src/app/login/Components/login.component.html
@@ -8,9 +8,11 @@
               <p class="text-muted {{invisible}}"> Please enter your login and password !</p>
               <div class="text-muted {{errorclass}}" role="alert">{{errormessage}}</div>
               <div class="text-muted {{valideclass}}" role="alert">{{validemessage}}</div>
-              <input type="text" name="" placeholder="Username" [(ngModel)]="auth.username">
-              <input type="password" name="" placeholder="Password" [(ngModel)]="auth.password">
-              <input type="submit" name="" value="Login" href="#" (click)="login()">
+                <form name="loginForm">
+                  <input type="text" name="username" placeholder="Username" [(ngModel)]="auth.username">
+                  <input type="password" name="password" placeholder="Password" [(ngModel)]="auth.password">
+                  <input type="submit" value="Login" href="#" (click)="login()">
+              </form>
             </div>
           </div>
         </div>
