--- a/Cave-A-Vin/src/styles.css
+++ b/Cave-A-Vin/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background: #191919;
+    /* background: #191919; */
+    background: #0a1821;
 }
