--- a/Cave-A-Vin/src/app/login/Components/login.component.css
+++ b/Cave-A-Vin/src/app/login/Components/login.component.css
@@ -23,7 +23,7 @@ body {
     /* position: absolute; */
     /* top: 50%; */
     /* left: 50%; */
-    background: #191919;
+    background: #0a1821;
     text-align: center;
     transition: 0.25s;
     /* margin-top: 100px; */
