--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -43,11 +43,11 @@
           </div>
         </li>
         <li class="navvar-text">
-          <a class="nav-link" href="">A propos</a>
+          <a class="nav-link" routerLink="about">A propos</a>
         </li>
         <li class="navvar-text;" style="margin: auto 50px auto auto;">
           <button style="width: 150px;" type="button" class="btn btn-warning" href=""
-            (click)="disconect()">Déconnection</button>
+            (click)="disconect()">Déconnection<i style="margin-left: 5px;" class="bi bi-door-open"></i></button>
         </li>
       </ul>
     </div>
