--- a/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
@@ -4,24 +4,85 @@
       <!-- <a href="#" class="btn btn-green" (click)="postBottle()">Ajouter un nouveau bottle</a> -->
 
       <div class="card border-danger" style="width: auto;">
-        <div class="card-header">Ajouter une nouvelle bouteille</div>
+        <div class="card-header">Gestion de toutes les bouteilles</div>
         <div class="container">
           <div class="row card-body text-danger">
-
-
-
+            <div style="display: inline-flex; text-align: center;margin: auto;">
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-              Ajouter
-            </button>
-
-            <!-- Modal -->
+              <button type="button" class="btn btn-outline-primary" style="margin-left:auto;margin-right: 10px;" data-toggle="modal" data-target="#staticBackdrop">
+                Ajouter
+              </button>
+              <button class="btn btn-outline-warning" style="margin-right:auto; margin-left: 10px;"data-toggle="modal" data-target="#updateBottle">
+                Update
+              </button>
+            </div>
+            <!-- Modal Ajout-->
             <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
               aria-labelledby="staticBackdropLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Bottle</h5>
+                    <h5 class="modal-title" id="staticBackdropLabel">Ajouter une bouteille</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <!-- <div class="form-group">
+                      <label for="recipient-name" class="col-form-label">ID :</label>
+                      <input type="number" class="form-control" id="recipient-name" [(ngModel)]="bottle.Id" />
+                    </div> -->
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Name :</label>
+                      <input type="text" class="form-control" id="message-text" [(ngModel)]="bottle.Name" />
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Date :</label>
+                      <input type="datetime" class="form-control" id="message-text" [(ngModel)]="bottle.Date" />
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Amount :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Amount" />
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Price per bottle :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.PricePerBottle" />
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Type vin :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Typevin" />
+                    </div>
+                    <!-- <div class="form-group">
+                      <label for="message-text" class="col-form-label">Owner :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Owner" />
+                    </div> -->
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Owner ID :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.OwnerId" />
+                    </div>
+                    <!-- <div class="form-group">
+                      <label for="message-text" class="col-form-label">Cave :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Cave" />
+                    </div> -->
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Cave ID :</label>
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.CaveId" />
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="postBottle()">Create</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Modal Update-->
+            <div class="modal fade" id="updateBottle" data-backdrop="static" data-keyboard="false" tabindex="-1"
+              aria-labelledby="updateBottleLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="updateBottleLabel">Modifier une bouteille</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -29,7 +90,7 @@
                   <div class="modal-body">
                     <div class="form-group">
                       <label for="recipient-name" class="col-form-label">ID :</label>
-                      <input type="number" class="form-control" id="recipient-name" [(ngModel)]="bottle.Id" />
+                      <input type="number" class="form-control" id="recipient-name" [(ngModel)]="bottleId" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Name :</label>
@@ -49,42 +110,32 @@
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Type vin :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.TypeVin" />
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Typevin" />
                     </div>
-                    <div class="form-group">
-                      <label for="message-text" class="col-form-label">Owner :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Owner" />
-                    </div>
+                    <!-- <div class="form-group">
+                                <label for="message-text" class="col-form-label">Owner :</label>
+                                <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Owner" />
+                              </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.OwnerID" />
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.OwnerId" />
                     </div>
-                    <div class="form-group">
-                      <label for="message-text" class="col-form-label">Cave :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Cave" />
-                    </div>
+                    <!-- <div class="form-group">
+                                <label for="message-text" class="col-form-label">Cave :</label>
+                                <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Cave" />
+                              </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.CaveID" />
+                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.CaveId" />
                     </div>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" (click)="postBottle()">Create</button>
+                    <button type="button" class="btn btn-primary" (click)="updateBottle()">Update</button>
                   </div>
                 </div>
               </div>
             </div>
-
-
-
-
-
-
-
-
-
-
             <div *ngFor="let bottle_ of bottles" class="col-4">
               <app-card-bottle (refreshListAfterDelete)="onGetBottles()" [bottle]="bottle_"></app-card-bottle>
             </div>
