--- a/Cave-A-Vin/src/app/login/Components/login.component.html
+++ b/Cave-A-Vin/src/app/login/Components/login.component.html
@@ -5,7 +5,7 @@
           <div class="card">
             <div class="box">
               <h1>Connection</h1>
-              <p class="text-muted {{invisible}}"> Please enter your login and password !</p>
+              <p class="text-muted {{invisible}}">S'il vous plaît renter votre nom d'utilisateur et votre mot de passe !</p>
               <div class="text-muted {{errorclass}}" role="alert">{{errormessage}}</div>
               <div class="text-muted {{valideclass}}" role="alert">{{validemessage}}</div>
                 <form name="loginForm">
@@ -13,6 +13,7 @@
                   <input type="password" name="password" placeholder="Password" [(ngModel)]="auth.password">
                   <input type="submit" value="Login" href="#" (click)="login()">
               </form>
+              <p class="mt-5 mb-3 text-muted">© 2020 - 2021</p>
             </div>
           </div>
         </div>
