--- a/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.html
@@ -3,18 +3,18 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Id : {{bottle.Id}}</li>
         <li class="list-group-item">Date : {{bottle.Date}}</li>
-        <li class="list-group-item">Amount : {{bottle.Amount}}</li>
-        <li class="list-group-item">Price Per Bottle : {{bottle.PricePerBottle}}</li>
-        <li class="list-group-item">TypeVin : {{bottle.Typevin}}</li>
+        <li class="list-group-item">Quantité : {{bottle.Amount}}</li>
+        <li class="list-group-item">Prix par bouteille : {{bottle.PricePerBottle}}</li>
+        <li class="list-group-item">Type de vin : {{bottle.Typevin}}</li>
         <!-- <li class="list-group-item">Owner : {{bottle.Owner}}</li>    -->
         <li class="list-group-item">OwnerID : {{bottle.OwnerId}}</li>   
         <!-- <li class="list-group-item">Cave : {{bottle.Cave}}</li>    -->
         <li class="list-group-item">CaveID : {{bottle.CaveId}}</li>   
         <!-- <img [src]="imageByForce()"/>   -->
-        <!-- <img src="https://localhost:5001/bottles/{{bottle.Id}}/avatar"> -->
+        <img class="bottle-img" src="{{bottle.ImageUrl}}">
     </ul>
     <div class="button-space">
-        <button class="btn btn-outline-danger" (click)="onDeleteBottle()">Delete</button>
+        <button class="btn btn-outline-danger" (click)="onDeleteBottle()">Supprimer</button>
     </div>
     <!-- <div class="button-space">
         <button class="btn btn-warning" (click)="updateBottle()">Update</button>
