Suppression des modules non utilisé

--- a/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.css
+++ b/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.css
@@ -6,7 +6,7 @@
     padding: 5px;
 }
 .bottle-img{
-    width: 30%;
-    height: 30%;
+    /* width: 30%; */
+    height: 250px;
     margin: auto;
 }
