Ajout de toute la partie cave avec image

--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -39,14 +39,14 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" routerLink="bottles">Des bouteilles</a>
-            <a class="dropdown-item" href="#">Une cave</a>
+            <a class="dropdown-item" routerLink="caves">Des caves</a>
           </div>
         </li>
         <li class="navvar-text">
           <a class="nav-link" routerLink="about">A propos</a>
         </li>
         <li class="navvar-text;" style="margin: auto 50px auto auto;">
-          <button style="width: 150px;" type="button" class="btn btn-warning" href=""
+          <button style="width: 150px;" type="button" class="btn btn-warning"
             (click)="disconect()">Déconnection<i style="margin-left: 5px;" class="bi bi-door-open"></i></button>
         </li>
       </ul>
