--- a/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
@@ -34,43 +34,43 @@
                     </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Nom :</label>
-                      <input type="text" class="form-control" id="message-text" [(ngModel)]="bottle.Name" />
+                      <input type="text" class="form-control"  [(ngModel)]="bottle.Name" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Date :</label>
-                      <input type="datetime" class="form-control" id="message-text" [(ngModel)]="bottle.Date" />
+                      <input type="datetime" class="form-control"  [(ngModel)]="bottle.Date" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Quantité :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Amount" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Amount" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Prix par bouteille :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.PricePerBottle" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.PricePerBottle" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Type de vin :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Typevin" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
                     <!-- <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Owner" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Owner" />
                     </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.OwnerId" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
                     </div>
                     <!-- <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Cave" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Cave" />
                     </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.CaveId" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.CaveId" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Photo de la bouteille (url):</label>
-                      <input type="text" class="form-control" id="message-text" [(ngModel)]="bottle.ImageUrl" />
+                      <input type="text" class="form-control"  [(ngModel)]="bottle.ImageUrl" />
                     </div>
                   </div>
                   <div class="modal-footer">
@@ -98,44 +98,36 @@
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Nom :</label>
-                      <input type="text" class="form-control" id="message-text" [(ngModel)]="bottle.Name" />
+                      <input type="text" class="form-control"  [(ngModel)]="bottle.Name" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Date :</label>
-                      <input type="datetime" class="form-control" id="message-text" [(ngModel)]="bottle.Date" />
+                      <input type="datetime" class="form-control"  [(ngModel)]="bottle.Date" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Quantité :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Amount" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Amount" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Prix par bouteille :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.PricePerBottle" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.PricePerBottle" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Type de vin :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Typevin" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
-                    <!-- <div class="form-group">
-                                <label for="message-text" class="col-form-label">Owner :</label>
-                                <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Owner" />
-                              </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.OwnerId" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
                     </div>
-                    <!-- <div class="form-group">
-                                <label for="message-text" class="col-form-label">Cave :</label>
-                                <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.Cave" />
-                              </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
-                      <input type="number" class="form-control" id="message-text" [(ngModel)]="bottle.CaveId" />
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.CaveId" />
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="message-text" class="col-form-label">Photo de la bouteille (url):</label>
-                    <input type="text" class="form-control" id="message-text" [(ngModel)]="bottle.ImageUrl" />
+                    <input type="text" class="form-control"  [(ngModel)]="bottle.ImageUrl" />
                   </div>  
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
