Ajout de l'auto complession update cave / bottle

--- a/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-bottle/card-bottle.component.html
@@ -1,5 +1,5 @@
 <div id="card-bottle">
-    <h1 class="card-title">{{bottle.Name}}</h1>
+    <h1 class="card-title" style="height: 100px;">{{bottle.Name}}</h1>
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Id : {{bottle.Id}}</li>
         <li class="list-group-item">Date : {{bottle.Date}}</li>
