--- a/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
@@ -28,10 +28,6 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <!-- <div class="form-group">
-                      <label for="recipient-name" class="col-form-label">ID :</label>
-                      <input type="number" class="form-control" id="recipient-name" [(ngModel)]="bottle.Id" />
-                    </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Nom :</label>
                       <input type="text" class="form-control"  [(ngModel)]="bottle.Name" />
@@ -52,18 +48,10 @@
                       <label for="message-text" class="col-form-label">Type de vin :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
-                    <!-- <div class="form-group">
-                      <label for="message-text" class="col-form-label">Owner :</label>
-                      <input type="number" class="form-control"  [(ngModel)]="bottle.Owner" />
-                    </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
                     </div>
-                    <!-- <div class="form-group">
-                      <label for="message-text" class="col-form-label">Cave :</label>
-                      <input type="number" class="form-control"  [(ngModel)]="bottle.Cave" />
-                    </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.CaveId" />
@@ -94,7 +82,7 @@
                   <div class="modal-body">
                     <div class="form-group">
                       <label for="recipient-name" class="col-form-label">ID :</label>
-                      <input type="number" class="form-control" id="recipient-name" [(ngModel)]="bottleId" />
+                      <input type="number" class="form-control" (input)="onIdChange($event)" id="recipient-name" [(ngModel)]="bottleId" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Nom :</label>
