--- a/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
@@ -1,5 +1,5 @@
 <div id="card-cave">
-    <h1 class="card-title">Cave №{{cave.Id}}</h1>
+    <h1 class="card-title" style="height: 100px;">Cave №{{cave.Id}}</h1>
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Location : {{cave.Location}}</li>
         <li class="list-group-item">Degree : {{cave.Degree}}</li>
