--- a/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
@@ -65,7 +65,7 @@
                                     <div class="modal-body">
                                         <div class="form-group">
                                             <label for="recipient-name" class="col-form-label">ID :</label>
-                                            <input type="number" class="form-control" id="recipient-name" [(ngModel)]="caveId" />
+                                            <input type="number" (input)="onIdChange($event)" class="form-control" id="recipient-name" [(ngModel)]="caveId" />
                                         </div>
                                         <div class="form-group">
                                             <label for="message-text" class="col-form-label">Location :</label>
