--- a/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Type de vin :</label>
-                      <input type="number" class="form-control"  [(ngModel)]="bottle.Typevin" />
+                      <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Type de vin :</label>
-                      <input type="number" class="form-control"  [(ngModel)]="bottle.Typevin" />
+                      <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
