--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -29,7 +29,7 @@
           <a class="nav-link" aria-current="page" routerLink="">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="bottles">Mes bouteilles</a>
+          <a class="nav-link" routerLink="">Mes infos</a>
         </li>
 
         <li class="nav-item dropdown">
