--- a/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
@@ -1,9 +1,9 @@
 <div id="card-cave">
     <h1 class="card-title" style="height: 100px;">Cave №{{cave.Id}}</h1>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Location : {{cave.Location}}</li>
-        <li class="list-group-item">Degree : {{cave.Degree}}</li>
-        <img data-toggle="modal" data-target="#openImage" class="cave-img" src="{{cave.ImageUrl}}">
+        <li class="list-group-item">Emplacement : {{cave.Location}}</li>
+        <li class="list-group-item">Température : {{cave.Degree}}</li>
+        <img  *ngIf="cave.ImageUrl != ''" data-toggle="modal" data-target="#openImage" class="cave-img" src="{{cave.ImageUrl}}">
     </ul>
     <div class="button-space">
         <button class="btn btn-outline-danger" (click)="onDeleteCave()">Supprimer</button>
