--- a/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
@@ -31,11 +31,11 @@
                                     <div class="modal-body">
 
                                         <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Location :</label>
+                                            <label for="message-text" class="col-form-label">Emplacement :</label>
                                             <input type="text" class="form-control" id="message-text" [(ngModel)]="cave.Location" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Degrés :</label>
+                                            <label for="message-text" class="col-form-label">Température :</label>
                                             <input type="number" class="form-control" id="message-text" [(ngModel)]="cave.Degree" />
                                         </div>
                                         <div class="form-group">
@@ -68,11 +68,11 @@
                                             <input type="number" (input)="onIdChange($event)" class="form-control" id="recipient-name" [(ngModel)]="caveId" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Location :</label>
+                                            <label for="message-text" class="col-form-label">Emplacement :</label>
                                             <input type="text" class="form-control" id="message-text" [(ngModel)]="cave.Location" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Degree :</label>
+                                            <label for="message-text" class="col-form-label">Température :</label>
                                             <input type="number" class="form-control" id="message-text" [(ngModel)]="cave.Degree" />
                                         </div>
                                         <div class="form-group">
