Modification du menu et petit ajout sur les caves

--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -29,19 +29,21 @@
           <a class="nav-link" aria-current="page" routerLink="">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="">Mes infos</a>
+          <a class="nav-link" routerLink="caves">Des caves</a>
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link" routerLink="">Mes infos</a> -->
+          <a class="nav-link" routerLink="bottles">Des bouteilles</a>
         </li>
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Ajouter
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="bottles">Des bouteilles</a>
-            <a class="dropdown-item" routerLink="caves">Des caves</a>
           </div>
-        </li>
+        </li> -->
         <li class="navvar-text">
           <a class="nav-link" routerLink="about">A propos</a>
         </li>
