--- a/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
@@ -2,7 +2,7 @@
     <h1 class="card-title" style="height: 100px;">Cave №{{cave.Id}}</h1>
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Emplacement : {{cave.Location}}</li>
-        <li class="list-group-item">Température : {{cave.Degree}}</li>
+        <li class="list-group-item">Température : {{cave.Degree}}°C</li>
         <img  *ngIf="cave.ImageUrl != ''" data-toggle="modal" data-target="#openImage" class="cave-img" src="{{cave.ImageUrl}}">
     </ul>
     <div class="button-space">
