Ajout de la liste déroulante sur les utilisateurs et les caves id depuis les bouteilles

--- a/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/banner/banner.component.html
@@ -29,11 +29,11 @@
           <a class="nav-link" aria-current="page" routerLink="">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="caves">Des caves</a>
+          <a class="nav-link" routerLink="caves">Caves</a>
         </li>
         <li class="nav-item">
           <!-- <a class="nav-link" routerLink="">Mes infos</a> -->
-          <a class="nav-link" routerLink="bottles">Des bouteilles</a>
+          <a class="nav-link" routerLink="bottles">Bouteilles</a>
         </li>
 
         <!-- <li class="nav-item dropdown">
