--- a/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/bottle/bottle.component.html
@@ -55,13 +55,27 @@
                       </select>
                     </div>
                     <div class="form-group">
-                      <label for="message-text" class="col-form-label">Owner ID :</label>
-                      <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
+                      <label for="message-text" class="col-form-label">Propriétaire</label>
+                      <!-- <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" /> -->
+                      <select name="typeVin" id="typeVin" class="form-control" [(ngModel)]="bottle.OwnerId">
+                        <option *ngFor="let user of users" value="{{user.Id}}">{{user.Firstname}} {{user.Lastname}}</option>
+                      </select>
                     </div>
                     <div class="form-group">
+                      <label for="message-text" class="col-form-label">Cave</label>
+                      <!-- <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" /> -->
+                      <select name="typeVin" id="typeVin" class="form-control" [(ngModel)]="bottle.CaveId">
+                        <option *ngFor="let cave of caves" value="{{cave.Id}}">{{cave.Location}}</option>
+                      </select>
+                    </div>
+                    <!-- <div class="form-group">
+                      <label for="message-text" class="col-form-label">Owner ID :</label>
+                      <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
+                    </div> -->
+                    <!-- <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.CaveId" />
-                    </div>
+                    </div> -->
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Photo de la bouteille (url):</label>
                       <input type="text" class="form-control"  [(ngModel)]="bottle.ImageUrl" />
@@ -111,13 +125,27 @@
                       <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" />
                     </div>
                     <div class="form-group">
+                      <label for="message-text" class="col-form-label">Propriétaire</label>
+                      <!-- <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" /> -->
+                      <select name="typeVin" id="typeVin" class="form-control" [(ngModel)]="bottle.OwnerId">
+                        <option *ngFor="let user of users" value="{{user.Id}}">{{user.Firstname}} {{user.Lastname}}</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Cave</label>
+                      <!-- <input type="text" class="form-control"  [(ngModel)]="bottle.Typevin" /> -->
+                      <select name="typeVin" id="typeVin" class="form-control" [(ngModel)]="bottle.CaveId">
+                        <option *ngFor="let cave of caves" value="{{cave.Id}}">{{cave.Location}}</option>
+                      </select>
+                    </div>
+                    <!-- <div class="form-group">
                       <label for="message-text" class="col-form-label">Owner ID :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.OwnerId" />
                     </div>
                     <div class="form-group">
                       <label for="message-text" class="col-form-label">Cave ID :</label>
                       <input type="number" class="form-control"  [(ngModel)]="bottle.CaveId" />
-                    </div>
+                    </div> -->
                   </div>
                   <div class="form-group">
                     <label for="message-text" class="col-form-label">Photo de la bouteille (url):</label>
