--- a/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/cave/cave.component.html
@@ -88,8 +88,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div *ngFor="let cave of caves" class="col-4">
-                            <app-card-cave (refreshListAfterDelete)="onGetCaves()" [cave]="cave"></app-card-cave>
+                        <div *ngFor="let cave_ of caves" class="col-4">
+                            <app-card-cave (refreshListAfterDelete)="onGetCaves()" [cave]="cave_"></app-card-cave>
                         </div>
                     </div>
                 </div>
