--- a/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
+++ b/Cave-A-Vin/src/app/portal/Components/card-cave/card-cave.component.html
@@ -3,7 +3,7 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Emplacement : {{cave.Location}}</li>
         <li class="list-group-item">Température : {{cave.Degree}}°C</li>
-        <img  *ngIf="cave.ImageUrl != ''" data-toggle="modal" data-target="#openImage" class="cave-img" src="{{cave.ImageUrl}}">
+        <img *ngIf="cave.ImageUrl != null" data-toggle="modal" data-target="#openImage" class="cave-img" src="{{cave.ImageUrl}}">
     </ul>
     <div class="button-space">
         <button class="btn btn-outline-danger" (click)="onDeleteCave()">Supprimer</button>
